<resources>
    <string name="app_name">SongForYou</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_title">Song For You</string>
    <string name="login_hint_id">ID</string>
    <string name="login_hint_password">PASSWORD</string>
    <string name="auto_login">자동 로그인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="common_login">로그인</string>
    <string name="google_login">구글로 로그인하기</string>
    <string name="sign_up">회원가입</string>
    <string-array name="gender">
        <item>남자</item>
        <item>여자</item>
    </string-array>
    <string-array name="year">
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
    </string-array>
</resources>