<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginVM"
            type="com.hanyeop.songforyou.view.login.UserViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".view.login.login.LoginFragment">

        <ImageView
            android:id="@+id/tv_login_title"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/login_title"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textColor="@color/md_theme_light_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_login_id"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_id"
            app:hintTextColor="@color/white"
            app:endIconMode="clear_text"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={loginVM.loginEmail}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_login_password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="password"
            app:hintTextColor="@color/white"
            app:endIconMode="password_toggle"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/tf_login_id"
            app:layout_constraintEnd_toEndOf="@id/tf_login_id"
            app:layout_constraintTop_toBottomOf="@+id/tf_login_id"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={loginVM.loginPassword}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_light"
            android:text="@string/auto_login"
            android:textColor="@color/white"
            style="@style/Widget.Material3.CompoundButton.CheckBox"
            app:layout_constraintStart_toStartOf="@id/tf_login_id"
            app:layout_constraintTop_toBottomOf="@id/tf_login_password"
            />

        <Button
            android:id="@+id/btn_find_password"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_light"
            android:text="@string/find_password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/tf_login_password"
            app:layout_constraintTop_toBottomOf="@id/tf_login_password"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/common_login"
            android:fontFamily="@font/noto_sans_medium"
            android:textColor="@color/white"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="@id/tf_login_id"
            app:layout_constraintEnd_toEndOf="@id/tf_login_id"
            app:layout_constraintTop_toBottomOf="@id/btn_find_password"
            android:background="@drawable/btn_login"/>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="아직 아이디가 없으세요?   "
            android:fontFamily="@font/noto_sans_light"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_signup"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            />
        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="회원 가입"
            android:fontFamily="@font/noto_sans_light"
            android:textColor="#5AAAF6"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@id/tv_signup"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>